# c

./: .gitignore  .gitmodules  Makefile.am  NOTICE  README.md  c-zap.pc.in  configure.ac  meson.build
.github/workflows/: ci.yml
compiler/: c++.zap.c  c++.zap.h  c.zap  c.zap.c  c.zap.h  schema-test.cpp  schema.zap  schema.zap.c  schema.zap.h  str.h  test.zap  test.zap.c  test.zap.h  update-notes.md  zapc-c.c
lib/: zap-list.inc  zap-malloc.c  zap-stream.c  zap.c  zap_c.h  zap_priv.h
tests/: addressbook.zap  addressbook.zap.c  addressbook.zap.h  example-test.cpp  zap-stream-test.cpp  zap-test.cpp
